--- a/github/workflows/main.yml
+++ b/github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Node.js CI with Docker
+name: Node.js CI with Docker Compose
 
 on:
   push:
@@ -14,17 +14,11 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v3
 
-    - name: Set up Docker Buildx
+    - name: Set up Docker and Docker Compose
       uses: docker/setup-buildx-action@v3
 
-    - name: Copy .env.local to .env
-      run: cp .env.local .env
-
-    - name: Build Docker Image
-      run: docker build -t my-node-app .
-
-    - name: Run Docker Container
-      run: docker run -d --name challenge -p 3000:3000 my-node-app
+    - name: Build and start services
+      run: docker-compose up -d
 
     - name: Check Container Logs
       run: docker logs challenge
@@ -32,8 +26,5 @@ jobs:
     - name: Run Tests
       run: docker exec challenge npm test
 
-    - name: Clean up
-      run: |
-        docker stop challenge
-        docker rm challenge
-        docker rmi my-node-app
+    - name: Shutdown
+      run: docker-compose down
