--- a/github/workflows/main.yml
+++ b/github/workflows/main.yml
@@ -1,30 +1,33 @@
-name: Node.js CI with Docker Compose
+name: main CI
 
 on:
   push:
-    branches: '**'
+    branches: [ "**" ]
   pull_request:
-    branches: '**'
+    branches: [ "**" ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    
     steps:
-    - name: Checkout Repository
+    - name: Checkout code
       uses: actions/checkout@v3
-
-    - name: Set up Docker and Docker Compose
-      uses: docker/setup-buildx-action@v3
-
-    - name: Build and start services
-      run: docker-compose up -d
-
-    - name: Check Container Logs
-      run: docker logs challenge
-
-    - name: Run Tests
-      run: docker exec challenge npm test
-
-    - name: Shutdown
-      run: docker-compose down
+      
+    - name: Create .env
+      run: cp .env.local.example .env
+      
+    - name: Build docker images
+      run: docker build -t challenge .
+      
+    - name: Run docker container
+      run: docker run -d -p 3000:3000 --name=challenge challenge
+      
+    - name: Run tests
+      run: docker exec -t challenge npm test
+      
+    - name: Clean up
+      run: |
+        docker stop challenge || true
+        docker rm challenge || true
+        docker rmi challenge || true
