--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,38 +1,33 @@
-name: Node.js CI with Docker
+name: main CI
 
 on:
   push:
-    branches: '**'
+    branches: [ "**" ]
   pull_request:
-    branches: '**'
+    branches: [ "main"]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    
     steps:
-    - name: Checkout Repository
+    - name: Checkout code
       uses: actions/checkout@v3
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-
-    - name: Copy .env.local to .env
-      run: cp .env.local .env
-
-    - name: Build Docker Image
+      
+    - name: Create .env
+      run: cp .env.example .env
+      
+    - name: Build docker images
       run: docker build -t challenge .
-
-    - name: Run Docker Container
-      run: docker run -d --name challenge -p 3000:3000 challenge
-    - name: Check Container Logs
-      run: docker logs challenge
-
-    - name: Run Tests
-      run: docker exec challenge npm test
-
+      
+    - name: Run docker container
+      run: docker run -d -p 3000:3000 --name=challenge challenge
+      
+    - name: Run tests
+      run: docker exec -t challenge npm test
+      
     - name: Clean up
       run: |
-        docker stop challenge
-        docker rm challenge
-        docker rmi challenge
+        docker stop challenge || true
+        docker rm challenge || true
+        docker rmi challenge || true
